--- a/nginx.conf
+++ b/nginx.conf
@@ -1,31 +1,16 @@
-worker_processes  1;
-
-events {
-    worker_connections  1024;
-}
-
-
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
-    gzip  on;
-    gzip_types text/plain text/css application/json application/javascript text/xml text/javascript;
-        gzip_comp_level 6;
-        gzip_min_length 1000;
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/javascript image/png image/svg+xml image/x-icon;
 
     server {
-        listen       8080;
-        server_name  localhost;
+        listen 80;
 
         location / {
-            root   /usr/share/nginx/html;
-            index  index.html index.htm;
+            root /usr/share/nginx/html;
+            index index.html index.htm;
             try_files $uri $uri/ /index.html;
         }
 
-        error_page  404              /index.html;
+        error_page 404 /index.html;
     }
+}
